# superdoc-visual-benchmarks

./: .gitignore  LICENSE  README.md  pyproject.toml  superdoc-benchmark.spec
harness/: index.html
harness/src/: main.js  style.css
node/: package.json  vite.config.js
npm/: LICENSE  README.md  package.json  superdoc-benchmark-0.2.7.tgz
npm/scripts/: postinstall.js  prepack.js  publish.js
scripts/: bump-version.sh  entitlements.plist  export_word_pdf.applescript  publish-npm.sh  release.sh
src/superdoc_benchmark/: __init__.py  main.py  update.py  utils.py
src/superdoc_benchmark/baselines/: __init__.py  r2_upload.py  upload.py
src/superdoc_benchmark/compare/: __init__.py  diff.py  html_report.py  report.py  score.py
src/superdoc_benchmark/superdoc/: __init__.py  capture.py  config.py  server.py  version.py
src/superdoc_benchmark/word/: __init__.py  capture.py  export.py
