[project]
name = "superdoc-benchmark"
version = "0.4.7"
description = "Visual benchmarking tool for SuperDoc document rendering"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "InquirerPy>=0.3.4",
    "rich>=13.0",
    "pymupdf>=1.24.0",
    "playwright>=1.40.0",
    "Pillow>=10.0.0",
    "numpy>=1.23.0",
    "scikit-image>=0.21.0",
    "scipy>=1.10.0",
    "typer>=0.9.0",
]

[project.scripts]
superdoc-benchmark = "superdoc_benchmark.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/superdoc_benchmark"]

[tool.uv]
dev-dependencies = [
    "pyinstaller>=6.0",
]
